<resources>
    <string name="app_name">Achie</string>
    <string name="pass_hint">Password...</string>
    <string name="email_hint">Your email...</string>
    <string name="login_btn_text">Login</string>
    <string name="register_btn_text">Register New Account</string>
    <string name="action_search_text">Search</string>
    <string name="action_settings_text">Account Settings</string>
    <string name="action_logout_text">Logout</string>
    <string name="reg_btn_text">Register</string>
    <string name="reg_login_text">Already have an account?</string>
    <string name="conf_pass_hint">Confirm password</string>
    <string name="reg_pass_hint">Password</string>
    <string name="add_post_hint">Add discription</string>
    <string name="post_btn_text">Post</string>
    <string name="bottom_home_text">Home</string>
    <string name="bottom_notification_text">Notifications</string>
    <string name="bottom_account_text">Account</string>
    <string name="add_achievement_hint">Type achievement name</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="topic_headline_text">CATAGORIES</string>
    <string name="topic_item_text">name of topic</string>
    <string name="topic_item_progress_text">(0/0)</string>
    <string name="bottom_topic_title">Topic</string>
    <string name="bottom_account_title">Accunt</string>
    <string name="bottom_achievement_text">Achievement</string>
    <string name="default_account_name">Username</string>
    <string name="latest_achievement_text">Latest Achievements</string>
    <string name="default_level_text">Level _</string>
    <string name="achievement_list_item_done_button_text"> Mark achievement as done</string>
    <string name="search_hint"> Search for profiles...</string>
    <string name="account_post_number_text">140</string>
    <string name="account_post_number_title">Posts</string>
    <string name="account_followers_title_text"> Followers</string>
    <string name="account_achievements_done_title_text">Achievements</string>
    <string name="account_items_done_text">Achievements</string>
    <string name="latest_achievement_string">LATEST ACHIEVEMENTS</string>
    <string name="daily_progress_title">DAILY PROGRESS</string>>
    <string name="update_account_settings_string">Update settings</string>
</resources>
